--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
               <a class="navigation-link link" href="./index.html">Studio</a>
             </li>
             <li class="item">
-              <a class="navigation-link link" href="./portfolio.html"
+              <a class="navigation-link link current" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
@@ -78,12 +78,19 @@
           <ul class="portfolio-list list">
             <li class="item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/banking-app.jpg"
-                  alt="banking app"
-                  width="360"
-                  height="300"
-                />
+                <div class="text-overlay-wrap">
+                  <img
+                    src="./images/banking-app.jpg"
+                    alt="banking app"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card">
                   <h2 class="card-title">Banking App Interface Concept</h2>
                   <p class="portfolio-text">App</p>
@@ -93,12 +100,19 @@
 
             <li class="item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/cashless-payment.jpg"
-                  alt="cashless payment"
-                  width="360"
-                  height="300"
-                />
+                <div class="text-overlay-wrap">
+                  <img
+                    src="./images/cashless-payment.jpg"
+                    alt="cashless payment"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card">
                   <h2 class="card-title">Cashless Payment</h2>
                   <p class="portfolio-text">Marketing</p>
@@ -108,12 +122,19 @@
 
             <li class="item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/meditation-app.jpg"
-                  alt="meditation app"
-                  width="360"
-                  height="300"
-                />
+                <div class="text-overlay-wrap">
+                  <img
+                    src="./images/meditation-app.jpg"
+                    alt="meditation app"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card">
                   <h2 class="card-title">Meditation App</h2>
                   <p class="portfolio-text">App</p>
@@ -123,12 +144,19 @@
 
             <li class="item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/taxi-srvices.jpg"
-                  alt="taxi srvices"
-                  width="360"
-                  height="300"
-                />
+                <div class="text-overlay-wrap">
+                  <img
+                    src="./images/taxi-srvices.jpg"
+                    alt="taxi srvices"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card">
                   <h2 class="card-title">Taxi Service</h2>
                   <p class="portfolio-text">Marketing</p>
@@ -138,12 +166,19 @@
 
             <li class="item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/screen-illustrations.jpg"
-                  alt="screen illustrations"
-                  width="360"
-                  height="300"
-                />
+                <div class="text-overlay-wrap">
+                  <img
+                    src="./images/screen-illustrations.jpg"
+                    alt="screen illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card">
                   <h2 class="card-title">Screen Illustrations</h2>
                   <p class="portfolio-text">Design</p>
@@ -153,12 +188,19 @@
 
             <li class="item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/online-courses.jpg"
-                  alt="online courses"
-                  width="360"
-                  height="300"
-                />
+                <div class="text-overlay-wrap">
+                  <img
+                    src="./images/online-courses.jpg"
+                    alt="online courses"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card">
                   <h2 class="card-title">Online Courses</h2>
                   <p class="portfolio-text">Marketing</p>
@@ -168,12 +210,19 @@
 
             <li class="item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/instagram.jpg"
-                  alt="instagram stories"
-                  width="360"
-                  height="300"
-                />
+                <div class="text-overlay-wrap">
+                  <img
+                    src="./images/instagram.jpg"
+                    alt="instagram stories"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card">
                   <h2 class="card-title">Instagram Stories Concept</h2>
                   <p class="portfolio-text">Design</p>
@@ -183,12 +232,19 @@
 
             <li class="item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/organic-food.jpg"
-                  alt="organic food"
-                  width="360"
-                  height="300"
-                />
+                <div class="text-overlay-wrap">
+                  <img
+                    src="./images/organic-food.jpg"
+                    alt="organic food"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card">
                   <h2 class="card-title">Organic Food</h2>
                   <p class="portfolio-text">Web Site</p>
@@ -198,12 +254,19 @@
 
             <li class="item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/coffee.jpg"
-                  alt="coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="text-overlay-wrap">
+                  <img
+                    src="./images/coffee.jpg"
+                    alt="coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card">
                   <h2 class="card-title">Fresh Coffee</h2>
                   <p class="portfolio-text">Web Site</p>
