--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="close" data-modal-close type="button">
-          <svg width="8px" height="8px">
+          <svg class="close-icon" width="8px" height="8px">
             <use href="./images/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
